0029024: DRAW - use common approach for reporting error message on wrong command arguments

Method Draw_Interpretor::ErrorOnWrongArgs() is added, providing user message for DRAW command called with incorrect arguments.